photo cropped and sized correctly

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -167,11 +167,10 @@
    div.user-photo {
      width: 100px;
      height: 100px;
-     padding-top: 20px;
      border-radius: 100px;
-     border: 1px solid #f58a89;
      background-color: #f58a89;
      margin: 0 auto;
+     overflow: hidden;
 
      i {
        color: white;
@@ -258,5 +257,4 @@
 
 .upload-photo {
   background-color: white;
-  overflow: hidden;
 }
